testdata/baselines/reference/submodule/conformance/jsDeclarationsTypedefPropertyAndExportAssignment.errors.txt
index.js(3,37): error TS2694: Namespace '"module".export=' has no exported member 'TaskGroup'.
index.js(21,1): error TS2309: An export assignment cannot be used in a module with other exported elements.
module.js(24,12): error TS2315: Type 'Object' is not generic.
module.js(27,1): error TS2309: An export assignment cannot be used in a module with other exported elements.


==== index.js (2 errors) ====
    const {taskGroups, taskNameToGroup} = require('./module.js');
    
    /** @typedef {import('./module.js').TaskGroup} TaskGroup */
                                        ~~~~~~~~~
!!! error TS2694: Namespace '"module".export=' has no exported member 'TaskGroup'.
    
    /**
     * @typedef TaskNode
     * @prop {TaskNode[]} children
     * @prop {TaskNode|undefined} parent
     * @prop {TaskGroup} group
     */
    
    /** @typedef {{timers: Map<string, TaskNode>}} PriorTaskData */
    class MainThreadTasks {
        /**
         * @param {TaskGroup} x
         * @param {TaskNode} y
         */
        constructor(x, y){}
    }
    
    module.exports = MainThreadTasks;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.
==== module.js (2 errors) ====
    /** @typedef {'parseHTML'|'styleLayout'} TaskGroupIds */
    
    /**
     * @typedef TaskGroup
     * @property {TaskGroupIds} id
     * @property {string} label
     * @property {string[]} traceEventNames
     */
    
    /**
     * @type {{[P in TaskGroupIds]: {id: P, label: string}}}
     */
    const taskGroups = {
        parseHTML: {
            id: 'parseHTML',
            label: 'Parse HTML & CSS'
        },
        styleLayout: {
            id: 'styleLayout',
            label: 'Style & Layout'
        },
    }
    
    /** @type {Object<string, TaskGroup>} */
               ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2315: Type 'Object' is not generic.
    const taskNameToGroup = {};
    
    module.exports = {
    ~~~~~~~~~~~~~~~~~~
        taskGroups,
    ~~~~~~~~~~~~~~~
        taskNameToGroup,
    ~~~~~~~~~~~~~~~~~~~~
    };
    ~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.